--- a/scss/nav.scss
+++ b/scss/nav.scss
@@ -4,6 +4,7 @@ nav {
   height: 110px;
   position: fixed;
   display: flex;
+  align-items: center;
 
   h1 {
     width: 40%;
